--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,11 +14,9 @@
               </a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Profile", current_user %></li>
-                <li><%= link_to "settings", '#' %></li>
+                <li><%= link_to "Settings", '#' %></li>
                 <li class="divider"></li>
-                <li>
-                  <%= link_to "Sign out", signout_path, method: 'delete' %>
-                </li>
+                <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
               </ul>
             </li>
         <% else %>    
